load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "btp",
    srcs = [
        "btp.go",
        "config.go",
        "rotate.go",
        "util.go",
    ],
    importpath = "github.com/icon-project/btp/btp",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gammazero_workerpool//:go_default_library",
        "//chain",
        "//chain/base",
        "//chain/icon",
        "//chain/near",
        "//chain/pra",
        "//chain/registry",
        "//common/config",
        "//common/db",
        "//common/errors",
        "//common/log",
        "//common/mta",
        "//common/wallet",
    ],
)

go_test(
    name = "btp_test",
    srcs = [
        "btp_test.go",
        "util_test.go",
    ],
    embed = [":btp"],
    deps = [
        "@com_github_gammazero_workerpool//:go_default_library",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
