load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "chain",
    srcs = [
        "btpaddress.go",
        "error.go",
        "mock_Sender.go",
        "type.go",
    ],
    importpath = "github.com/icon-project/btp/chain",
    visibility = ["//visibility:public"],
    deps = [
        "//common/errors",
        "@com_github_stretchr_testify//mock",
    ],
)

go_test(
    name = "chain_test",
    srcs = ["type_test.go"],
    embed = [":chain"],
    deps = ["@com_github_stretchr_testify//assert"],
)
