[package]
name = "contract-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runner = { git = "https://github.com/near/runner-rs.git"}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"