load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "icon",
    srcs = [
        "client.go",
        "error.go",
        "pra_bmv.go",
        "receiver.go",
        "sender.go",
        "sender_pra.go",
        "serialize.go",
        "type.go",
    ],
    importpath = "github.com/icon-project/btp/chain/icon",
    visibility = ["//visibility:public"],
    deps = [
        "//chain",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_hashicorp_go_retryablehttp//:go_default_library",
        "//common",
        "//common/codec",
        "//common/crypto",
        "//common/intconv",
        "//common/jsonrpc",
        "//common/log",
        "//common/mpt",
    ],
)

go_test(
    name = "icon_test",
    srcs = [
        "pra_bmv_test.go",
        "receiver_test.go",
        "sender_test.go",
    ],
    embed = [":icon"],
    deps = [
        "//chain",
        "//common/codec",
        "//common/crypto",
        "//common/log",
        "//common/wallet",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
