load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pra",
    srcs = [
        "client.go",
        "error.go",
        "receiver.go",
        "receiver_relay.go",
        "receiver_relay_event_fetch.go",
        "receiver_relay_seralized_parts.go",
        "receiver_relay_store.go",
        "sender.go",
        "type.go",
        "type_evm.go",
    ],
    importpath = "github.com/icon-project/btp/chain/pra",
    visibility = ["//visibility:public"],
    deps = [
        "//chain",
        "//chain/icon",
        "//chain/pra/binding",
        "//chain/pra/substrate",
        "//common/codec",
        "//common/config",
        "//common/db",
        "//common/errors",
        "//common/log",
        "//common/mta",
        "//common/wallet",
        "@com_github_centrifuge_go_substrate_rpc_client_v3//types:go_default_library",
        "@com_github_ethereum_go_ethereum//:go_default_library",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_go_ethereum//ethclient:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
    ],
)

go_test(
    name = "pra_test",
    srcs = [
        "client_test.go",
        "receiver_relay_test.go",
        "receiver_test.go",
        "sender_test.go",
    ],
    embed = [":pra"],
    deps = [
        "//chain",
        "//chain/icon",
        "//chain/pra/binding",
        "//chain/pra/mocks",
        "//chain/pra/substrate",
        "@com_github_centrifuge_go_substrate_rpc_client_v3//types:go_default_library",
        "@com_github_ethereum_go_ethereum//crypto:go_default_library",
        "@com_github_ethereum_go_ethereum//ethclient:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "@com_github_icon_project_btp//common/codec:go_default_library",
        "@com_github_icon_project_btp//common/crypto:go_default_library",
        "@com_github_icon_project_btp//common/errors:go_default_library",
        "@com_github_icon_project_btp//common/log:go_default_library",
        "@com_github_icon_project_btp//common/wallet:go_default_library",
        "@com_github_itering_scale_go//:go_default_library",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
