load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)
package(default_visibility = ["//visibility:public"])

go_library(
    name = "btpsimple_lib",
    srcs = [
        "main.go",
        "save.go",
        "start.go",
        "version.go",
    ],
    importpath = "github.com/icon-project/btp/cmd/btpsimple",
    visibility = ["//visibility:private"],
    deps = [
        "//btp",
        "//common/cli",
        "//common/crypto",
        "//common/errors",
        "//common/log",
        "//common/wallet",
        "@com_github_getsentry_sentry_go//:go_default_library",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "btpsimple",
    embed = [":btpsimple_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_image(
    name = "btpsimple_image",
    base = "@golang_base//image",
    entrypoint = ["/btpsimple"],
    files = [":btpsimple"],
)
