load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "iconvalidators_lib",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/icon-project/btp/cmd/btpsimple",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/btpsimple/module/icon",
        "//common/cli",
        "//common/codec",
        "//common/intconv",
        "//common/log",
        "@com_github_getsentry_sentry_go//:go_default_library",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "iconvalidators",
    embed = [":iconvalidators_lib"],
    visibility = ["//visibility:public"],
)
