load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "errors",
    srcs = ["errors.go"],
    importpath = "github.com/icon-project/btp/common/errors",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:errors"],
)

go_test(
    name = "errors_test",
    srcs = ["errors_test.go"],
    embed = [":errors"],
)
