load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "intconv",
    srcs = [
        "bytes.go",
        "string.go",
    ],
    importpath = "github.com/icon-project/btp/common/intconv",
    visibility = ["//visibility:public"],
    deps = ["@com_github_pkg_errors//:errors"],
)

go_test(
    name = "intconv_test",
    srcs = [
        "bytes_test.go",
        "string_test.go",
    ],
    embed = [":intconv"],
)
