package(default_visibility = ["//visibility:public"])

genrule(
    name = "javascore_native",
    outs = [
        "nativecoin-0.1.0-optimized.jar",
    ],
    cmd = "gradle -q -b $$PWD/external/javascore/nativecoin/build.gradle optimizedJar; cp $$PWD/external/javascore/nativecoin/build/libs/nativecoin-0.1.0-optimized.jar $@",
    executable = True,
    local = True,
    tools = [
        "@javascore//lib:btp_lib_javascore",
    ],
)

genrule(
    name = "javascore_irc",
    outs = [
        "irc31-0.1.0-optimized.jar",
    ],
    cmd = "gradle -b $$PWD/external/javascore/nativecoin/build.gradle build; cp $$PWD/external/javascore/nativecoin/build/libs/irc31-0.1.0-optimized.jar $@",
    executable = True,
    local = True,
    tools = [
        "@javascore//lib:btp_lib_javascore",
    ],
)
