[package]
name = "near-btp"
version = "0.1.0"
authors = ["Icon Foundation<foo@icon.foundation>"]
edition = "2018"

[workspace]
members = [
    "bmc",
    "bmv",
    "bsh/bsh-periphery",
    "bsh/bsh-token",
    "libraries",
]

[features]
integration-tests = []

[dev-dependencies]
bmc = { path = "./bmc" }
bsh-periphery = { path = "./bsh/bsh-periphery" }
libraries = { path = "./libraries" }
bsh-token = { path = "./bsh/bsh-token" }
near-sdk = "3.1.0"
near-sdk-sim = "3.2.0"
lazy_static = "1.4.0"
kitten = "^0.2.0"
near-crypto = { git = "https://github.com/near/nearcore", rev = "84ae110d99d26a5638d4aaca2ddaf08d048e0920" }
chrono = "0.4.19"
rand = "0.8.4"
runner = { git = "https://github.com/HugoByte/runner-rs.git"}
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true
# Tell `rustc` to optimize for small code size.
opt-level = "z"
debug = false
panic = "abort"