[package]
name = "near-btp"
version = "0.1.0"
authors = ["Icon Foundation<foo@icon.foundation>"]
edition = "2018"

[workspace]
members = [
    "bmc",
    "bsh/base",
    "bsh/token",
    "bsh/nativecoin",
    "bmv/icon",
    "libraries",
    "test-helper"
]

[features]
integration-tests = []

[dev-dependencies]
bmc = { path = "./bmc" }
libraries = { path = "./libraries" }
test-helper = { path = "./test-helper" }
near-sdk = "3.1.0"
near-sdk-sim = "3.2.0"
lazy_static = "1.4.0"
kitten = "^0.2.0"
near-crypto = { git = "https://github.com/near/nearcore", rev = "84ae110d99d26a5638d4aaca2ddaf08d048e0920" }
runner = { git = "https://github.com/HugoByte/runner-rs.git"}
tokio = { version = "^1.6.0", features = ["full"] }
serde_json = "^1.0"

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true
# Tell `rustc` to optimize for small code size.
opt-level = "z"
debug = false
panic = "abort"