load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "BMCContract.go",
        "DataError.go",
        "EthClient.go",
    ],
    importpath = "github.com/icon-project/btp/chain/pra/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//chain/pra/binding",
        "@com_github_ethereum_go_ethereum//:go_default_library",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_stretchr_testify//mock",
    ],
)
