load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rpc",
    srcs = [
        "client.go",
        "constants_unix.go",
        "doc.go",
        "endpoints.go",
        "errors.go",
        "handler.go",
        "http.go",
        "inproc.go",
        "ipc.go",
        "ipc_js.go",
        "ipc_unix.go",
        "ipc_windows.go",
        "json.go",
        "metrics.go",
        "server.go",
        "service.go",
        "stdio.go",
        "subscription.go",
        "types.go",
        "websocket.go",
    ],
    importpath = "github.com/icon-project/btp/common/go-ethereum/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//common/log",
        "@com_github_deckarep_golang_set//:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//common/hexutil:go_default_library",
        "@com_github_ethereum_go_ethereum//metrics:go_default_library",
        "@com_github_ethereum_go_ethereum//p2p/netutil:go_default_library",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_hashicorp_go_retryablehttp//:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:windows": [
            "@in_gopkg_natefinch_npipe_v2//:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "rpc_test",
    srcs = [
        "client_example_test.go",
        "client_test.go",
        "http_test.go",
        "server_test.go",
        "subscription_test.go",
        "testservice_test.go",
        "types_test.go",
        "websocket_test.go",
    ],
    embed = [":rpc"],
    deps = [
        "//common/log",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//common/hexutil:go_default_library",
        "@com_github_ethereum_go_ethereum//common/math:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "@com_github_gorilla_websocket//:websocket",
    ],
)
